Remove bad figure

--- a/evidence.html
+++ b/evidence.html
@@ -63,7 +63,7 @@
         <br>
         <br>
         <h2 id="observational">Observational Evidence</h2>
-        <img src="sgraspectrum.png" alt="A figure showing the quiescent spectrum of Sgr A*.">
+        <!--<img src="sgraspectrum.png" alt="A figure showing the quiescent spectrum of Sgr A*.">-->
         <p>
           Of course, it would be foolish to make the claim solely based on theoretical evidence.
           Even given that theory permits it, it could perhaps for other reasons be impossible -- perhaps there's no reasonable mechanism for one to form, or maybe there is some other reason they cannot exist, like some kind of cosmic censorship.
