--- a/credits.html
+++ b/credits.html
@@ -82,7 +82,7 @@
           <h3>Evidence</h3>
           <ul>
             <li><a href="https://commons.wikimedia.org/wiki/File:1919_eclipse_negative.jpg"></a></li>
-            <li>Picture of Sgr A*'s quiescent 3-79keV NuSTAR spectrum provided by a colleague, cropped by me.</li>
+            <li>Zhang, S., et. al. 2017 ApJ 843, 96</li>
           </ul>
           </div>
         </div>
