Add more about S2 2018 pass

--- a/observation.html
+++ b/observation.html
@@ -103,9 +103,12 @@
         </p>
         <p>
           Soon, other explanations were ruled out, and by 2003, orbital analysis of stars in the region of Sgr A* showed that the whole mass was within a very small region, about 6 light-hours -- consistent with Sgr A* being the <a href="models.html#smbh">supermassive black hole</a> at the center of the Milky Way Galaxy.
-          Further results showed hot-spots, consistent with the accretion of hot material, falling into the event horizon, but the 'smoking gun' came with the Event Horizon Telescope's famous 2022 image of the region immediately around Sgr A*.
+          One such observation is of one of the best-studied galactic center stars, known as S2 (or S0-2), which in 2018 made its closest approach to Sgr A*.
+          During that pass, it approached within 120AU of the black hole, and passed with a velocity at 3% of the speed of light.
+          The final results from the approach were completely consistent with General Relativity's predictions with a 4.3 million solar-mass object -- consistent only with a black hole, or some un-identified and mysterious kind of compact object that theorists still have not developed.
         </p>
         <p>
+          Further results showed hot-spots, consistent with the accretion of hot material, falling into the event horizon, but the 'smoking gun' came with the Event Horizon Telescope's famous 2022 image of the region immediately around Sgr A*.
           Using radio interferometry, and with a network of telescopes all across the planet, the Event Horizon Telescope collaboration was able to produce a radio image of the supermassive black hole, down to a scale of about 0.4AU, showing a bright region of accretion around a dark area, the black hole's shadow.
           With no other kind of dark, compact object able to reach the kind of density required, this (and the previous observation of M87*, the supermassive black hole at the center of Messier 87) has been taken as the first direct observational evidence of a black hole, even as (technically) the black hole is still not directly imaged.
         </p>
