Update concluding paragraph to be more complete

--- a/evidence.html
+++ b/evidence.html
@@ -82,8 +82,16 @@
           No matter which way we take it, there is an awful lot of evidence here, collected over decades of study, and with ample theoretical basing behind it.
         </p>
         <hr>
+        <!--<p>
+            In short: despite how extreme the idea of the black hole is, there is more than enough compelling evidence for their existence, from theory and observation, to state beyond any reasonable doubt that they exist, and are a real and fascinating part of the Universe in which we live.
+            </p>
+        -->
         <p>
-          In short: despite how extreme the idea of the black hole is, there is more than enough compelling evidence for their existence, from theory and observation, to state beyond any reasonable doubt that they exist, and are a real and fascinating part of the Universe in which we live.
+          In aggregate, there is quite a bit of evidence for black holes, despite their extreme nature.
+          From stellar-mass black holes which form binary pairs, yet which are too small and too massive to be anything else, to direct imaging of the most massive compact objects in the universe, it is hard to find another equally extreme yet equally-supported type of object.
+          Some are still skeptical, perhaps, but that is in spite of the evidence and not because of it.
+          Black holes are a prime example of how even absurd predictions can sometimes come true, and how intuition isn't everything in science.
+          Sometimes, just trust the math, and then reality will show that you're right.
         </p>
       </div>
       <div id="footerspacing">
